# BacPrune-Rust

./: .Rhistory  .gitignore  Cargo.toml  README.md  bac_prune.R  linphenpruning.R  post_rust_gt_Manhattan.tiff  pyproject.toml  resistances.csv  rust_results.csv  test.csv
bioconda-recipe/: meta.yaml
experimental/: linphenpruning.R  test_data_generation.R
r_and_stan_versions/: bac_prune.Stan
src/: bacprune_rust_results.csv  main.rs
test_data_code/: pyseer_complete_dataset_code.R  test_data.R
