[package]
name        = "bacprune"
version     = "0.9.0"
edition     = "2021"
description = "Fast LD pruning of haploid genotype matrices"
keywords    = ["bioinformatics", "genomics", "ld-pruning", "gwas", "population-genetics"]
categories  = ["science", "command-line-utilities"]
readme      = "README.md"

[[bin]]
name = "bacprune"
path = "src/main.rs"

[dependencies]
csv         = "1.1"
ndarray     = "0.15.6"
ndarray-csv = "0.5.1"
