[build-system]
requires      = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name        = "bacprune"
version     = "0.9.0"
description = "Fast LD pruning of haploid genotype matrices"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.8"
keywords    = ["bioinformatics", "genomics", "ld-pruning", "gwas", "population-genetics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.maturin]
# Package the compiled Rust binary (no Python bindings required).
# The `bacprune` executable is installed into the environment's bin/ directory
# so it is available on PATH after `pip install bacprune`.
bindings = "bin"
